--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "node": "16"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "@redux-devtools/extension": "3.2.2",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "magic.css": "^1.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "4.4.0",
+    "react-icons": "^4.4.0",
     "react-redux": "8.0.2",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
